--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 #topbar {
   background-color: red;
-  height: 15%;
+  margin: -8px;
+  height: 62px;
 }
 
 .corner {
@@ -16,26 +17,27 @@
 }
 
 #teamSlider {
-  top: 15%;
+  top: 17%;
   position: absolute;
   display: grid;
   height: 70%;
-  width: 30%;
-  right: 78%;
+  width: 46%;
+  right: 75%;
   grid-row-gap: 10px;
 }
 
 .pSlider {
   background-color: lightgray;
   float: left;
-  width: 100%;
-  height: 100%;
+  box-shadow: 6px 5px 0px 0px;
+  /* width: 100%;
+  height: 100%; */
 
 }
 
 .pkmnIcon {
   position: absolute;
   right: -1%;
-  width: 27%;
+  width: auto;
   height: 14%;
 }
