--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   background-image: url('https://backgroundcheckall.com/wp-content/uploads/2017/12/pokemon-grass-background-7.png');
+  font-family: 'Press Start 2P', cursive;
 }
 
 
@@ -10,7 +11,7 @@ body {
 }
 
 #navTrainer {
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
   position: absolute;
   padding-left: 38%;
   font-size: 36px;
@@ -64,7 +65,7 @@ body {
 #abilities {
   margin-top: 10px;
   margin-bottom: 0;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
   font-size: xx-large;
 }
 
