--- a/output.css
+++ b/output.css
@@ -1,6 +1,6 @@
 .pkmnText {
   position: absolute;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
   font-size: 21px;
   left: 58%;
   padding: 2%;
