--- a/input.scss
+++ b/input.scss
@@ -1,7 +1,7 @@
 .pkmnText {
   position: absolute;
   font-family: sans-serif;
-  font-size: 21px;
+  // font-size: 21px;
   left: 58%;
   padding: 2%;
 }
@@ -44,7 +44,7 @@
 }
   #name {
     text-align: center !important;
-    font-size: xx-large;
+    // font-size: xx-large;
     box-shadow: none !important
 }
 }
