--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   background-image: url('https://backgroundcheckall.com/wp-content/uploads/2017/12/pokemon-grass-background-7.png');
   font-family: 'Press Start 2P', cursive;
-  font-size: large;
+  font-size: xx-small;
 }
 
 
