--- a/output.css
+++ b/output.css
@@ -46,7 +46,7 @@
 }
 #statsCard #name {
   text-align: center !important;
-  /* font-size: xx-large; */
+  font-size: xx-large;
   box-shadow: none !important;
 }
 
