--- a/input.scss
+++ b/input.scss
@@ -45,7 +45,7 @@
 }
   #name {
     text-align: center !important;
-    // font-size: xx-large;
+    font-size: xx-large;
     box-shadow: none !important
 }
 }
