Forgot to fix the fonts for mobile.

--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 @media only screen and (max-width: 850px) {
   body {
-    background-color: lightblue;
     font-size: xx-small !important;
   }
   #name {
@@ -8,11 +7,8 @@
   }
 }
 
-
 @media only screen and (min-width: 850px) {
   body {
-    background-image: url('https://backgroundcheckall.com/wp-content/uploads/2017/12/pokemon-grass-background-7.png');
-    font-family: 'Press Start 2P', cursive;
     font-size: large;
   }
   #name {
@@ -21,6 +17,10 @@
   }
 }
 
+body {
+  background-image: url('https://backgroundcheckall.com/wp-content/uploads/2017/12/pokemon-grass-background-7.png');
+  font-family: 'Press Start 2P', cursive;
+}
 
 #topbar {
   background-color: lightsteelblue;
